# hfsevents

./: README  hfsevents.cabal
System/OSX/: FSEvents.hs
cbits/: c_fsevents.c  c_fsevents.h  c_fsevents.m
test/: test.hs  trace.hs
