cabal-version:       2.2
name:                hfsevents
version:             0.1.7
synopsis:            File/folder watching for OS X
homepage:            http://github.com/luite/hfsevents
license:             BSD-3-Clause
license-file:        LICENSE
author:              Luite Stegeman
maintainer:          stegeman@gmail.com
category:            System
build-type:          Simple
extra-source-files:  cbits/c_fsevents.h, test/test.hs, test/trace.hs

source-repository head
  type:     git
  location: https://github.com/luite/hfsevents.git

library
  default-language: Haskell98
  exposed-modules: System.OSX.FSEvents
  if os(darwin)
    buildable: True
  else
    buildable: False
  frameworks: Cocoa
  cxx-sources: cbits/c_fsevents.m
  include-dirs: cbits
  extra-libraries: pthread
  build-depends:
    base >= 4 && < 5,
    bytestring,
    cereal >= 0.3 && < 0.6,
    unix,
    mtl,
    text

